@@ -50,7 +50,6 @@ importFrom(dplyr,do)
 importFrom(dplyr,full_join)
 importFrom(dplyr,funs)
 importFrom(dplyr,group_by)
-importFrom(dplyr,group_by_)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -95,6 +94,7 @@ importFrom(purrr,map_lgl)
 importFrom(purrr,pmap_chr)
 importFrom(purrr,pmap_df)
 importFrom(purrr,pwalk)
+importFrom(rlang,syms)
 importFrom(stats,as.formula)
 importFrom(stats,setNames)
 importFrom(stats,terms)
@@ -105,8 +105,7 @@ importFrom(stringr,str_split)
 importFrom(tibble,add_column)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
-importFrom(tidyr,complete)
-importFrom(tidyr,gather)
-importFrom(tidyr,spread)
+importFrom(tidyr,complete_)
+importFrom(tidyr,spread_)
 importFrom(utils,head)
 importFrom(utils,tail)
